[package]
name = "jsontocsv"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.128"
csv = "1.1"
serde = { version = "1.0.210", features = ["derive"]}
clap = { version = "4.5.17", features = ["derive"] }
